# sysrepo-plugin-dt-fw

./: CMakeLists.txt
CMakeModules/: FindLIBUBOX.cmake
src/: firmware-upgrade.c  firmware-upgrade.h
yang/: opencpe-firmware-mgmt@2014-02-06.yang
